[package]
name = "oxcc"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
oxc_allocator = "0.90.0"
oxc_codegen = "0.90.0"
oxc_parser = "0.90.0"
oxc_semantic = "0.90.0"
oxc_span = "0.90.0"
oxc_transformer = "0.90.0"
oxc_diagnostics = "0.90.0"
pico-args = "0.5.0"

[build-dependencies]
cbindgen = "0.29"

[profile.release]
strip = true
lto = true
opt-level = 3
